# pptx-md

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: CREWBOARD-VERSION  settings.json
.claude/agents/: architect.md  designer.md  developer.md  doc-writer.md  planner.md  reviewer.md  tester.md
.claude/hooks/: block-board-write.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: change-request.md  defect.md  planning.md  task.md
.github/workflows/: ci.yml  real-vlm-smoke.yml  release.yml
docs/: GUIDE.md  api.md  usage.md
docs/00-charter/: charter.md  project-profile.md
docs/10-requirements/: REQ-core.md  REQ-v020.md  REQ-wave3.md
docs/20-design/: ARCH-M1.md  ARCH-M12.md  ARCH-M2.md  ARCH-M3.md  ARCH-M4.md  ARCH-M5.md  ARCH-M6.md  ARCH-Wave3.md  ARCH-v020.md
docs/30-test/: TR-12.md  TR-15.md  TR-16.md  TR-17.md  TR-21.md  TR-22.md  TR-26.md  TR-27.md  TR-28.md  TR-33.md  TR-34.md  TR-35.md  TR-36.md  TR-37.md  TR-43.md  TR-44.md  TR-45.md  TR-46.md  TR-53.md  TR-58.md  TR-59.md  (+11 more)
tests/: conftest.py  fr35_fixtures.py  test_api.py  test_api_fr33.py  test_assembler.py  test_assembler_fr24.py  test_assembler_fr33.py  test_classifier.py  test_complexity.py  test_coverage_gate.py  test_describer.py  test_description_pipeline.py  test_docs.py  test_fr25_table_integrity.py  test_fr35_regression_gate.py  test_golden_regression.py  test_heading.py  test_ir.py  test_ir_fr33.py  test_masking.py  test_mermaid.py  test_mermaid_fallback.py  test_metadata.py  test_notes.py  test_parser.py  test_parser_fr26.py  test_pipeline.py  test_providers.py  test_providers_reconstruct.py  test_release.py  test_slide_describer.py  test_slide_reconstruction.py  test_slide_reconstruction_smoke.py  test_slide_render.py  test_smoke.py  test_tr67_qa.py  test_tr68_qa.py  test_validator.py  test_vector.py
(+50 files in other folders)
