[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pptx-md"
version = "0.1.1"
description = "Convert PPTX files into LLM-friendly Markdown (VLM-first image understanding)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "ms9648" }]
keywords = ["pptx", "markdown", "powerpoint", "llm", "vlm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "python-pptx",
    "Pillow",
]

[project.optional-dependencies]
# VLM SDK 는 반드시 여기에만 (스킬 §4, ADR-002). core 에 포함 금지.
vlm = [
    "anthropic>=0.40",
    "openai>=1.0",
]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "black",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/ms9648/pptx-md"
Repository = "https://github.com/ms9648/pptx-md"

[tool.hatch.build.targets.wheel]
packages = ["src/pptx_md"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pptx_md",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# FR-23: pythonpath ensures tests always import from this worktree's src/
pythonpath = ["src"]
# M6: 커버리지 게이트 활성화 (FR-17, ADR-005 / 원 예고: ADR-004)
addopts = "--cov=src/pptx_md --cov-report=term-missing --cov-fail-under=75"
